# clisample

./: Cargo.toml  Settings.toml  ToDo.md  history.txt
examples/: autocomplete.rs  prefixsearch.rs  readlinesample.rs  yamlparser.rs
src/: main.rs
src/cmd/: configcmd.rs  mod.rs  rootcmd.rs
src/commons/: completerforfile.rs  mod.rs  subcmdcompleter.rs
src/interact/: cli.rs  mod.rs
src/logger/: logger.rs
src/request/: mod.rs  req.rs  responsepaser.rs
