[package]
name = "clisample"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "2.33.3"
clap = "3.0.0-beta.4"
rustyline = "9.0.0"
shellwords = "1.1.0"
log = "0.4"
log4rs = "1.0.0"

[[example]]
name = "readline"
path = "examples/readlinesample.rs"